--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-316.2KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-778.8KB/s(Youtube:不良林), server: 18.183.213.25, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.31MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.32MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-780.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇫🇷 法国-1.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 台湾-1.15MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.46MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-460.6KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 10b3df8b-2316-4b43-843a-d165ce6603aa, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.56MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.13MB/s(Youtube:不良林), server: vip2shentai.kuli888.xyz, port: 32103, type: trojan, password: 2187303b-d0d9-3916-b455-d9da7f7bb4af, sni: vip2shentai.kuli888.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-778.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
