--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.31MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.46MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-7.29MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-441.1KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
+  - {name: 🇺🇸 美国-4.94MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-460.6KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 10b3df8b-2316-4b43-843a-d165ce6603aa, sni: hk64.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.56MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.13MB/s(Youtube:不良林), server: vip2shentai.kuli888.xyz, port: 32103, type: trojan, password: 2187303b-d0d9-3916-b455-d9da7f7bb4af, sni: vip2shentai.kuli888.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 107.148.23.159, port: 26969, type: trojan, password: 1f316deb-02e7-4050-acd9-abcb3942fd37, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-921.5KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-921.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-921.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-921.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-921.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-921.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-921.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-441.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-460.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-647.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-921.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
