--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-523.9KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-197.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.05MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.02MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.37MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-191.6KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.66MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-197.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-707.1KB/s(Youtube:不良林), server: trojan1.udpgw.com, port: 443, type: trojan, password: affae2e0-e84b-11ec-b09f-1239d0255272, sni: trojan1.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 107.148.23.159, port: 26969, type: trojan, password: 1f316deb-02e7-4050-acd9-abcb3942fd37, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-509.8KB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
+  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.54MB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-523.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-707.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-523.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-707.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-523.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-707.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-523.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-707.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-523.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-707.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-523.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-707.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-523.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-551.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-707.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-509.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
